--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinates"
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
